Add: basic frontend - not finished

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -1,1 +1,24 @@
-<h1>Hello DrinkApp 1.0</h1>
+<%- include('./partials/header.ejs')%>
+
+<div class="finding-menu">
+  <h2>Find drink you want to prepare</h2>
+  <form action="/find" method="get">
+    <label for="name">Type name of drink or ingredient:</label>
+    <input type="text" id="name">
+    <p>Search by:</p>
+    <label for="drink">drink name</label>
+    <input type="checkbox" name="drink" id="drink">
+    <label for="ingredient">ingredient</label>
+    <input type="checkbox" name="ingredient" id="ingredient">
+    <button type="submit">SEARCH</button>
+  </form>
+</div>
+
+<div class="finding-results">
+  <%if(locals.data){ %>
+  <p><%=data%></p>
+  <%} else { %>
+  <% } %>
+</div>
+
+<%- include('./partials/footer.ejs')%>
