Fix: form bug, front 80% finished

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -4,7 +4,7 @@
   <h2>Find drink you want to prepare</h2>
   <form action="/find" method="get">
     <label for="name">Type name of drink or ingredient:</label>
-    <input type="text" id="name">
+    <input type="text" name="name" id="name">
     <p>Search by:</p>
     <label for="drink">drink name</label>
     <input type="checkbox" name="drink" id="drink">
