--- a/views/content.ejs
+++ b/views/content.ejs
@@ -12,17 +12,6 @@
 <div id="data-container"></div>
 <div id="pagination-container"></div>
 
-<div class="finding-results">
-  <%if(locals.data){ %>
-  <%data.forEach((drink) => { %>
-  <h3><%=drink.name%></h3>
-  <img src="<%=drink.imageURL%>" alt="drink image">
-  <p><%=drink.ingredient1.measure%> <%=drink.ingredient1.name%></p>
-  <%})%>
-  <%} else { %>
-  <% } %>
-</div>
-
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="pagination.js"></script>
 
@@ -42,12 +31,68 @@
   })
 
   function singlePageTemplate(data) {
-    let htmlString = "<ul>";
-    data.forEach(element => {
-      htmlString += `<li>${element.name}</i>`;
+    let htmlString = '<div class="finding-results">';
+    data.forEach(drink => {
+      htmlString += `<div class="drink-card">`
+      htmlString += `<h3>${drink.name}</h3>`;
+      htmlString += `<img src="${drink.imageURL}" alt="drink image">`;
+      htmlString += templateIndgredients(drink);
+      htmlString += `</div>`
     });
-    htmlString += '</ul>';
+    htmlString += '</div>';
     return htmlString;
+  }
+
+  function templateIndgredients(drink) {
+    console.log(drink);
+    let html = `<p>`;
+    if (drink.ingredient1.name != null) {
+      html += `${drink.ingredient1.name} `;
+    }
+    if (drink.ingredient2.name != null) {
+      html += `${drink.ingredient2.name} `;
+    }
+    if (drink.ingredient3.name != null) {
+      html += `${drink.ingredient3.name} `;
+    }
+    if (drink.ingredient4.name != null) {
+      html += `${drink.ingredient4.name} `;
+    }
+    if (drink.ingredient5.name != null) {
+      html += `${drink.ingredient5.name} `;
+    }
+    if (drink.ingredient6.name != null) {
+      html += `${drink.ingredient6.name} `;
+    }
+    if (drink.ingredient7.name != null) {
+      html += `${drink.ingredient7.name} `;
+    }
+    if (drink.ingredient8.name != null) {
+      html += `${drink.ingredient8.name} `;
+    }
+    if (drink.ingredient9.name != null) {
+      html += `${drink.ingredient9.name} `;
+    }
+    if (drink.ingredient10.name != null) {
+      html += `${drink.ingredient10.name} `;
+    }
+    if (drink.ingredient11.name != null) {
+      html += `${drink.ingredient11.name} `;
+    }
+    if (drink.ingredient12.name != null) {
+      html += `${drink.ingredient12.name} `;
+    }
+    if (drink.ingredient13.name != null) {
+      html += `${drink.ingredient13.name} `;
+    }
+    if (drink.ingredient14.name != null) {
+      html += `${drink.ingredient14.name} `;
+    }
+    if (drink.ingredient15.name != null) {
+      html += `${drink.ingredient15.name} `;
+    }
+    html += `</p>`
+    return html;
   }
 </script>
 
