--- a/views/content.ejs
+++ b/views/content.ejs
@@ -4,7 +4,7 @@
   <h2>Find drink you want to prepare</h2>
   <form action="/find" method="get">
     <label for="name">Enter the name of the drink or part of it:</label>
-    <input type="text" name="name" id="name">
+    <input type="text" name="name" id="name" required>
     <button type="submit">SEARCH</button>
   </form>
 </div>
@@ -31,7 +31,7 @@
       }
     })
   } else {
-    var html = "<h3>We didn't find the drink you are looking for 👻</h3>";
+    var html = "<h3>We couldn't find the drink you were looking for 👻</h3>";
     $('#data-container').html(html);
   }
 
