--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Find any Drink 🍹</title>
-  <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="pagination.css" />
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/pagination.css" />
 </head>
 
 <body>
