Add: displaying pictures of ingredients

--- a/views/drink_details.ejs
+++ b/views/drink_details.ejs
@@ -5,7 +5,9 @@
   <h1><%=drink.name%></h3>
     <p>Category: <%=drink.category%></p>
     <img src="<%=drink.imageURL%>" alt="<%=drink.name%> image">
-    
+    <%drink.ingredients.forEach((ingredient, index) => { %>
+      <img src="https://www.thecocktaildb.com/images/ingredients/<%=drink.ingredients[index].name%>-Medium.png" alt="<%=ingredient.name%> picture">
+    <%})%>
     <p>How to prepare: <%=drink.instruction%></p>
     <%} else {%>
     <h3>We cannot find the page you are looking for</h3>
