--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,5 +10,7 @@
 
 <body>
   <div class="header">
-    <h1>Find recipe for any drink 🍹</h1>
+    <div id="page-title">
+      <h1>Find recipe for any drink 🍹</h1>
+    </div>
   </div>
