Add: basic footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,9 @@
-<h2>footer</h2>
+<nav>
+  <button class="btn-footer"><a href="/?clear=true">Home</a></button>
+</nav>
+<p>
+  This website uses the free API provided by <a href="https://www.thecocktaildb.com/">© 2024 TheCocktailDB</a>.
+</p>
 <script src="/events.js"></script>
 </body>
 
