--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="header">
+  <div id="header">
     <div id="page-title">
       <h1>Find recipe for any drink 🍹</h1>
     </div>
