--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: #fff5cd;
 }
 
 #header {
@@ -27,11 +31,11 @@ body {
 }
 
 #content {
-  background-color: #fff5cd;
 }
 
 #footer {
   background-color: #e78f81;
+  margin-top: auto;
 }
 
 #footer p {
