--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Mynerve&display=swap");
+
 body {
   margin: 0;
   display: flex;
@@ -9,7 +11,7 @@ body {
 #header {
   text-align: center;
   background-color: #b7e0ff;
-  height: 30vh;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,6 +19,10 @@ body {
   background-image: url("/pictures/bar.jpg");
   background-size: cover;
   background-position: center;
+  color: #ff6a53;
+  text-shadow: -1.5px 0 black, 0 1.5px black, 1.5px 0 black, 0 -1.5px black;
+  font-family: "Mynerve", cursive;
+  font-size: 90px;
 }
 
 #header > img {
