--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,6 @@
 <body>
   <div id="header">
     <div id="page-title">
-      <h1>Find recipe for any drink 🍹</h1>
+      <h1>Coctail Book</h1>
     </div>
   </div>
