--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Mynerve&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Alata&display=swap");
 
+:root {
+  --drink-card-width: 400px;
+  --drink-card-height: 200px;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -42,6 +47,27 @@ body {
   margin-right: 10vw;
 }
 
+.drink-card {
+  display: flex;
+  border: 1px solid black;
+  width: var(--drink-card-width);
+  height: var(--drink-card-height);
+  text-align: right;
+  border-radius: 5%/10%;
+}
+
+.drink-card img {
+  height: calc(var(--drink-card-width) / 2);
+  aspect-ratio: 1/1;
+  border-top-left-radius: 10%;
+  border-bottom-left-radius: 10%;
+}
+
+.card-content {
+  width: 100%;
+  margin-right: calc(0.05 * var(--drink-card-width));
+}
+
 #footer {
   background-color: #e78f81;
   margin-top: auto;
@@ -67,11 +93,6 @@ body {
 .finding-results {
   margin-bottom: 25px;
   background-color: rgb(254, 184, 255);
-}
-
-.finding-results img {
-  height: 200px;
-  aspect-ratio: 1/1;
 }
 
 #pagination-container {
