--- a/views/content.ejs
+++ b/views/content.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header.ejs')%>
 
-<div id="content">
+<div class="content">
   <div class="finding-menu">
     <h2>Enter the name of the drink or part of it:</h2>
     <form action="/find" method="get">
