--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -80,7 +80,7 @@ body {
   font-family: "Alata", sans-serif;
 }
 
-#content {
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
