--- a/views/drink_details.ejs
+++ b/views/drink_details.ejs
@@ -1,18 +1,21 @@
 <%- include('./partials/header.ejs')%>
 
-<div class="drink-details-container">
-  <button onclick="window.location.href='/'">Return</button>
-  <%if(locals.drink) {%>
-  <h1><%=drink.name%></h3>
-    <p>Category: <%=drink.category%></p>
-    <img src="<%=drink.imageURL%>" alt="<%=drink.name%> image">
-    <%drink.ingredients.forEach((ingredient, index) => { %>
-    <img src="https://www.thecocktaildb.com/images/ingredients/<%=drink.ingredients[index].name%>-Medium.png" alt="<%=ingredient.name%> picture">
-    <%})%>
-    <p>How to prepare: <%=drink.instruction%></p>
-    <%} else {%>
-    <h3>We cannot find the page you are looking for</h3>
-    <%}%>
+<div class="content">
+  <button class="btn-custom1" onclick="window.location.href='/'">Return</button>
+  <div class="drink-details-container">
+
+    <%if(locals.drink) {%>
+    <h1><%=drink.name%></h3>
+      <p>Category: <%=drink.category%></p>
+      <img src="<%=drink.imageURL%>" alt="<%=drink.name%> image">
+      <%drink.ingredients.forEach((ingredient, index) => { %>
+      <img src="https://www.thecocktaildb.com/images/ingredients/<%=drink.ingredients[index].name%>-Medium.png" alt="<%=ingredient.name%> picture">
+      <%})%>
+      <p>How to prepare: <%=drink.instruction%></p>
+      <%} else {%>
+      <h3>We cannot find the page you are looking for</h3>
+      <%}%>
+  </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
