--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <div id="footer">
   <nav>
-    <button class="btn-footer"><a href="/?clear=true">Home</a></button>
+    <button class="btn-footer"><a href="/">Home</a></button>
   </nav>
   <p>
     This website uses the free API provided by <a href="https://www.thecocktaildb.com/">© 2024 TheCocktailDB</a>.
