Add: Responsive styles

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Find any Drink 🍹</title>
   <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/responsive.css">
   <link rel="stylesheet" href="/styles/pagination.css" />
 </head>
 
