Update: page title

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Find any Drink 🍹</title>
+  <title>Coctail Book 🍹</title>
   <link rel="stylesheet" href="/styles/main.css">
   <link rel="stylesheet" href="/styles/responsive.css">
   <link rel="stylesheet" href="/styles/pagination.css" />
