Fix: bug with sending only spaces via html form

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -4,7 +4,7 @@
   <div class="finding-menu">
     <h2>Enter the name of the drink or part of it:</h2>
     <form action="/find" method="get">
-      <input class="input-custom1" type="text" name="name" id="name" required>
+      <input class="input-custom1" type="text" name="name" id="name" required pattern=".*\S.*">
       <button class="btn-custom1" type="submit">SEARCH</button>
     </form>
   </div>
