--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,6 @@
 <body>
   <div id="header">
     <div id="page-title">
-      <h1>Coctail Book</h1>
+      <h1>Cocktail Book</h1>
     </div>
   </div>
